<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lb3</string>
    <string name="login_title">Вхід</string>
    <string name="login_subtitle">Увійдіть до свого акаунту Lb3</string>
    <string name="register_title">Реєстрація</string>
    <string name="register_subtitle">Створіть акаунт та почніть навчання</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Ім\'я</string>
    <string name="login_btn">Увійти</string>
    <string name="register_btn">Зареєструватися</string>
    <string name="no_account">Немає акаунту?</string>
    <string name="have_account">Вже є акаунт?</string>
    <string name="register_link">Зареєструватися</string>
    <string name="login_link">Увійти</string>
    <string name="demo_hint">Демо: demo@lb3.com / password123</string>
    <string name="error_empty_fields">Заповніть усі поля</string>
    <string name="error_invalid_credentials">Невірний email або пароль</string>
    <string name="error_email_taken">Цей email вже зареєстрований</string>
    <string name="nav_catalog">Каталог</string>
    <string name="nav_my_learning">Моє навчання</string>
    <string name="nav_teachers">Викладачі</string>
    <string name="nav_profile">Профіль</string>
    <string name="filter_all">Усі курси</string>
    <string name="filter_my">Мої курси</string>
    <string name="catalog_title">Каталог курсів</string>
    <string name="catalog_subtitle">Оберіть курс та почніть навчання</string>
    <string name="status_available">Available</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_completed">Completed</string>
    <string name="duration_format">%1$s</string>
    <string name="price_format">%1$d ₴</string>
    <string name="enroll">Enroll</string>
    <string name="enrolled">Записано</string>
    <string name="complete_course">Завершити курс</string>
    <string name="course_completed">Курс завершено</string>
    <string name="course_details">Деталі курсу</string>
    <string name="teachers_section">Викладачі</string>
    <string name="lessons_section">Програма курсу</string>
    <string name="reviews_section">Відгуки</string>
    <string name="reviews_count">Відгуки (%1$d)</string>
    <string name="no_reviews">Поки що немає відгуків</string>
    <string name="your_rating">Ваша оцінка:</string>
    <string name="review_hint">Напишіть відгук про курс…</string>
    <string name="submit_review">Залишити відгук</string>
    <string name="review_after_complete">Відгук можна залишити після завершення курсу</string>
    <string name="my_learning_title">Моє навчання</string>
    <string name="my_learning_subtitle">Курси, на які ви записані</string>
    <string name="my_learning_empty">Ви ще не записані на жоден курс</string>
    <string name="browse_courses">Переглянути курси</string>
    <string name="teachers_title">Наші викладачі</string>
    <string name="teachers_subtitle">Професіонали, які допоможуть досягти цілей</string>
    <string name="courses_count">%1$d курсів</string>
    <string name="profile_title">Особистий кабінет</string>
    <string name="progress_label">Прогрес навчання</string>
    <string name="progress_format">%1$d з %2$d курсів завершено</string>
    <string name="logout">Вийти</string>
    <string name="lesson_complete">Виконано</string>
    <string name="lesson_mark">Позначити</string>
    <string name="avg_rating">Середній рейтинг: %1$.1f</string>
    <string name="login_required">Увійдіть, щоб записатися на курс</string>

    <!-- Adding missing strings that were causing errors in activities -->
    <string name="invalid_credentials">Невірний email або пароль</string>
    <string name="all_fields_required">Заповніть усі поля</string>
    <string name="email_taken">Цей email вже зареєстрований</string>
</resources>
